@@ -1,3 +1,4 @@
+- allow to bypass startup dialog
 - back/forward navigation in help pages
 - can print help pages and output
 - better handling of errors while installing packages
